# drone-impact

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  README.md  config.yaml  docker-compose.yml  index.html  pyproject.toml
plans/: F01-project-scaffold.md  F02-coordinate-utilities.md  F03-dem-module.md  F04-physics-m1.md  F05-physics-m2.md  F06-physics-m3.md  F07-population-layer.md  F08-infrastructure-layer.md  F09-casualty-engine.md  F10-scoring-engine.md  F11-startup-health.md  F12-api-single-drone.md  F13-api-batch.md  F14-performance-benchmarks.md  F15-data-visualization-dashboard.md  F16-batch-visualization.md  F17-trajectory-animation.md  F18-docker-compose.md  F19-demo-scenarios.md  F20-safe-intercept-constraint.md  F21-fallout-area-visualization.md  F22-click-to-select-trajectory-point.md  F23-trajectory-direction-indicator.md  F24-scenario-result-cache.md  README.md
plans/bugfixes/: B01-performance-population-query.md  B02-event-loop-blocking.md
plans/improvements/: I01-m2-powered-phase.md  I02-m3-altitude-density.md  I03-job-store-ttl.md  I04-batch-partial-failure.md  I05-cep-from-centroid.md  I06-population-per-cell-area.md  I07-casualty-stepped-function.md  I08-m2-altitude-density.md  I09-interpolation-tests.md  I12-numba-jit-physics.md  (+2 more)
scripts/: download_data.sh  extract_infra.py  ingest_strikes.py  merge_dem.py
spec/: architecture.md  assumptions.md  casualty-model.md  dashboard.md  data-sources.md  engagement-model.md  inputs-outputs.md  overview.md  physics-model.md  roadmap.md
tests/: benchmark_parallel.py  conftest.py
(+72 files in other folders)
