[project]
name = "droneimpact"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "numba>=0.59",
    "scipy>=1.12",
    "pyproj>=3.6",
    "h3>=3.7",
    "shapely>=2.0",
    "rasterio>=1.3",
    "fiona>=1.9",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "streamlit-folium>=0.18",
    "folium>=0.16",
    "branca>=0.7",
    "plotly>=5.18",
    "geopandas>=0.14",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "hypothesis>=6.100",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "perf: mark test as performance benchmark (skipped without --run-perf)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
